--- a/resume.html
+++ b/resume.html
@@ -100,7 +100,7 @@
                                         <div class="d-inline-block bi bi-download me-2"></div>
                                         Télécharger le CV
                                     </a>
-                                    <a class="btn btn-primary px-4 py-3" href="Tableau%20de%20synthèse%20-%20Epreuve%20E4%20-%20BTS%20SIO%202023.xlsx">
+                                    <a class="btn btn-primary px-4 py-3" href="Tableau%20de%20synthèse%20-%20Epreuve%20E4%20-%20BTS%20SIO%202023%20(3).xlsx">
                                         <div class="d-inline-block bi bi-download me-2"></div>
                                         Mon Tableau de synthèse
                                     </a>
@@ -130,7 +130,7 @@
                                         <div class="row align-items-center gx-5">
                                             <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                                 <div class="bg-light p-4 rounded-4">
-                                                    <div class="text-primary fw-bolder mb-2">18-22 Décembre 2024</div>
+                                                    <div class="text-primary fw-bolder mb-2">18-22 Décembre 2023</div>
                                                     <div class="small text-muted">Orange</div>
                                                     <div class="small text-muted">Issy-les-Moulineaux, 92</div>
                                                 </div>
@@ -158,12 +158,7 @@
                             </div>
 
                             <!-- Experience Card 3-->
-
-
                         </section>
-
-
-
 
 
                         <!-- Divider-->
