--- a/resume.html
+++ b/resume.html
@@ -147,7 +147,7 @@
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-primary fw-bolder mb-2">Janvier 2024-Février 2024</div>
-                                                <div class="small fw-bolder">Createur MLD</div>
+                                                <div class="small fw-bolder">Createur MLD et Devellopeur</div>
                                                 <div class="small text-muted">CODE Flow</div>
                                                 <div class="small text-muted">Nanterre, 92</div>
                                             </div>
