Ajout de mes projets d'écoles

--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,19 @@
                                             <h2 class="fw-bolder">Help ORT PHP</h2>
                                             <p>Le projet consiste à développer la partie front-end d'un site web appelé HelpORT, construit en PHP Symfony 6. L'objectif principal est d'offrir un support aux étudiants de l'école ORT Montreuil en leur permettant de dispenser des cours entre eux, en fonction de leurs classes et des matières dans lesquelles ils peuvent offrir leur aide.
 
-                                                Les fonctionnalités développées incluent la possibilité de choisir les matières dans lesquelles dispenser des cours, la demande de cours de soutien et la création d'un graphique analytique pour suivre l'utilisation de l'application. </p>
+                                                Les fonctionnalités développées incluent la possibilité de choisir les matières dans lesquelles dispenser des cours, la demande de cours de soutien et la création d'un graphique analytique pour suivre l'utilisation de l'application. Voici quelques images </p>
+                                            Verification de l'existance des identifiants de connexions avec API de l'école
+                                            <img class="img-fluid" src="assets/verification.png" alt="..." ></p>
+                                            Ensuite un lien est envoyer par mail avec lequel un nouveau mot de passe est créer pour utiliser l'application web
+                                            <img class="img-fluid" src="assets/modificationMdp.png" alt="..." ></p>
+                                            Connexion avec les nouveaux identifiants
+                                            <img class="img-fluid" src="assets/connexion.png" alt="..." ></p>
+                                            Création de demandes
+                                            <img class="img-fluid" src="assets/création.png" alt="..." ></p>
+                                            Modification des demandes
+                                            <img class="img-fluid" src="assets/modification.png" alt="..." ></p>
+                                            Statistiques des soutiens
+                                            <img class="img-fluid" src="assets/stat.png" alt="..." ></p>
                                         </div>
                                         <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
                                     </div>
@@ -65,7 +77,19 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Help ORT JAVA</h2>
                                             <p>Le deuxième projet porte sur HelpORT, mais cette fois-ci en tant qu'application lourde développée en JavaFX. Les fonctionnalités du projet restent inchangées, à l'exception de la structure de la base de données qui est différente.</p>
-                                        <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
+                                        <img class="img-fluid" src="assets/javaLoad.png" alt="...">
+                                            Accueil de la partie etudiante
+                                            <img class="img-fluid" src="assets/JavaSoutien.png" alt="...">
+                                            Partie admin de l'applicaction
+                                            <img class="img-fluid" src="assets/JavaAdmin.png" alt="...">
+                                            Affichage des matières
+                                            <img class="img-fluid" src="assets/affichage%20de.png" alt="...">
+                                            creation de demande
+                                            <img class="img-fluid" src="assets/creationdemande.png" alt="...">
+                                            modification et suppression de demandes
+                                            <img class="img-fluid" src="assets/JavaModification.png" alt="...">
+                                            statistique des soutiens
+                                            <img class="img-fluid" src="assets/javaStat.png" alt="...">
                                     </div>
                                     </div>
                                 </div>
