Modifications de la présentation v1

--- a/projects.html
+++ b/projects.html
@@ -54,17 +54,10 @@
 
                                                 Les fonctionnalités développées incluent la possibilité de choisir les matières dans lesquelles dispenser des cours, la demande de cours de soutien et la création d'un graphique analytique pour suivre l'utilisation de l'application. Voici quelques images </p>
                                             Verification de l'existance des identifiants de connexions avec API de l'école
-                                            <img class="img-fluid" src="assets/verification.png" alt="..." ></p>
-                                            Ensuite un lien est envoyer par mail avec lequel un nouveau mot de passe est créer pour utiliser l'application web
-                                            <img class="img-fluid" src="assets/modificationMdp.png" alt="..." ></p>
-                                            Connexion avec les nouveaux identifiants
-                                            <img class="img-fluid" src="assets/connexion.png" alt="..." ></p>
-                                            Création de demandes
-                                            <img class="img-fluid" src="assets/création.png" alt="..." ></p>
-                                            Modification des demandes
-                                            <img class="img-fluid" src="assets/modification.png" alt="..." ></p>
-                                            Statistiques des soutiens
-                                            <img class="img-fluid" src="assets/stat.png" alt="..." ></p>
+                                            <div class="image-link" >
+                                            <img src="assets/logo%20ort.png" alt="..." >
+                                                <div class="image-layer">gzg</div>
+                                            </div>
                                         </div>
                                         <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
                                     </div>
