--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="index.html">Accueil</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link" href="resume.html">Resumé</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                             <!--li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li -->
                         </ul>
@@ -37,7 +37,7 @@
             <!-- Page Content-->
             <div class="container px-5 my-5">
                 <div class="text-center mb-5">
-                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Resume</span></h1>
+                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Resumé</span></h1>
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
@@ -50,6 +50,7 @@
                                 <h2 class="text-secondary fw-bolder mb-4">Formation</h2>
 
                                 <!-- Education Card 2-->
+                                <div class="hover-element">
                                 <div class="card shadow border-0 rounded-4 mb-5">
                                     <div class="card-body p-5">
                                         <div class="row align-items-center gx-5">
@@ -70,7 +71,11 @@
                                         </div>
                                     </div>
                                 </div>
+                                </div>
+
+
                                 <!-- Education Card 1-->
+                                <div class="hover-element">
                                 <div class="card shadow border-0 rounded-4 mb-5">
                                     <div class="card-body p-5">
                                         <div class="row align-items-center gx-5">
@@ -91,71 +96,79 @@
                                         </div>
                                     </div>
                                 </div>
+                                </div>
+
 
                                 <div class="d-flex align-items-center justify-content-between mb-4">
                                     <h2 class="text-primary fw-bolder mb-0">Experience</h2>
                                     <!-- Download resume button-->
                                     <!-- Note: Set the link href target to a PDF file within your project-->
-                                    <a class="btn btn-primary px-4 py-3" href="CV%20Ecole%20AYITE%20Ekué.pdf">
+                                    <div class="hover-element"> <a class="btn btn-primary px-4 py-3" href="CV%20Ecole%20AYITE%20Ekué.pdf">
                                         <div class="d-inline-block bi bi-download me-2"></div>
                                         Télécharger le CV
                                     </a>
-                                    <a class="btn btn-primary px-4 py-3" href="Tableau%20de%20synthèse%20-%20Epreuve%20E4%20-%20BTS%20SIO%202023%20(3).xlsx">
-                                        <div class="d-inline-block bi bi-download me-2"></div>
-                                        Mon Tableau de synthèse
-                                    </a>
+
+                                </div>
                                 </div>
                             <!-- Experience Card 1-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
-                                <div class="card-body p-5">
-                                    <div class="row align-items-center gx-5">
-                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                            <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">Mai 2023-Juillet 2023</div>
-                                                <div class="small fw-bolder">Web Develloper</div>
-                                                <div class="small text-muted">SUNU assurance</div>
-                                                <div class="small text-muted">Lome, Togo</div>
+                                <div class="hover-element">
+                                    <div class="card shadow border-0 rounded-4 mb-5">
+                                        <div class="card-body p-5">
+                                            <div class="row align-items-center gx-5">
+                                                <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                                    <div class="bg-light p-4 rounded-4">
+                                                        <div class="text-primary fw-bolder mb-2">Mai 2023-Juillet 2023</div>
+                                                        <div class="small fw-bolder">Web Develloper</div>
+                                                        <div class="small text-muted">SUNU assurance</div>
+                                                        <div class="small text-muted">Lome, Togo</div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-8"><div>J'ai réalisé un cahier des charges pour une application de caisse en me renseignant sur les différents besoins des caissiers. Ensuite, j'ai créé une base de données UML ainsi qu'un diagramme de cas d'utilisation, puis une base de données.
+
+                                                    Ensuite, j'ai créé un CRUD pour la partie administration sans obligation de style, qui sera déterminé ultérieurement par l'entreprise pour la partie administration.
+
+                                                    Enfin, j'ai créé une application de gestion de caisse qui affiche les informations d'achat des clients, ainsi que leurs relevés de compte transmis depuis la base de données de l'application métier pour alimenter celle de l'application de caisse. L'application doit permettre aux caissiers de gérer le passage des assurances impayées en payées, puis de les modifier dans la base de données.</div></div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>J'ai réalisé un cahier des charges pour une application de caisse en me renseignant sur les différents besoins des caissiers. Ensuite, j'ai créé une base de données UML ainsi qu'un diagramme de cas d'utilisation, puis une base de données.
-
-                                            Ensuite, j'ai créé un CRUD pour la partie administration sans obligation de style, qui sera déterminé ultérieurement par l'entreprise pour la partie administration.
-
-                                            Enfin, j'ai créé une application de gestion de caisse qui affiche les informations d'achat des clients, ainsi que leurs relevés de compte transmis depuis la base de données de l'application métier pour alimenter celle de l'application de caisse. L'application doit permettre aux caissiers de gérer le passage des assurances impayées en payées, puis de les modifier dans la base de données.</div></div>
                                     </div>
                                 </div>
-                            </div>
-                                <div class="card shadow border-0 rounded-4 mb-5">
-                                    <div class="card-body p-5">
-                                        <div class="row align-items-center gx-5">
-                                            <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                                <div class="bg-light p-4 rounded-4">
-                                                    <div class="text-primary fw-bolder mb-2">18-22 Décembre 2023</div>
-                                                    <div class="small text-muted">Orange</div>
-                                                    <div class="small text-muted">Issy-les-Moulineaux, 92</div>
+
+
+                                <div class="hover-element">
+                                    <div class="card shadow border-0 rounded-4 mb-5">
+                                        <div class="card-body p-5">
+                                            <div class="row align-items-center gx-5">
+                                                <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                                    <div class="bg-light p-4 rounded-4">
+                                                        <div class="text-primary fw-bolder mb-2">18-22 Décembre 2023</div>
+                                                        <div class="small text-muted">Orange</div>
+                                                        <div class="small text-muted">Issy-les-Moulineaux, 92</div>
+                                                    </div>
                                                 </div>
+                                                <div class="col-lg-8"><div>Le but de se projet était de trouver une solution pour que les batîments de l'enseigne Orange consomme le moins d'éléctricité et pour solution une IA devait être utilisé.</div></div>
                                             </div>
-                                            <div class="col-lg-8"><div>Le but de se projet était de trouver une solution pour que les batîments de l'enseigne Orange consomme le moins d'éléctricité et pour solution une IA devait être utilisé.</div></div>
                                         </div>
                                     </div>
                                 </div>
                             <!-- Experience Card 2-->
 
-                            <div class="card shadow border-0 rounded-4 mb-5">
-                                <div class="card-body p-5">
-                                    <div class="row align-items-center gx-5">
-                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                            <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">Janvier 2024-Février 2024</div>
-                                                <div class="small fw-bolder">Createur MLD et Devellopeur</div>
-                                                <div class="small text-muted">CODE Flow</div>
-                                                <div class="small text-muted">Nanterre, 92</div>
+                                <div class="hover-element">
+                                    <div class="card shadow border-0 rounded-4 mb-5">
+                                        <div class="card-body p-5">
+                                            <div class="row align-items-center gx-5">
+                                                <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                                    <div class="bg-light p-4 rounded-4">
+                                                        <div class="text-primary fw-bolder mb-2">Janvier 2024-Février 2024</div>
+                                                        <div class="small fw-bolder">Createur MLD et Devellopeur</div>
+                                                        <div class="small text-muted">CODE Flow</div>
+                                                        <div class="small text-muted">Nanterre, 92</div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-8"><div>Pendant mon stage, j'ai été chargé de reprendre un projet d'application web d'orchestre développée en Java avec Spring Boot. Mes missions comprenaient la refonte de la modélisation de la base de données, sa création sur MySQL, la mise en place du projet Spring Boot, la configuration de la source de données MySQL dans Spring Boot, ainsi que la création de certaines entités, leurs repositories et l'implémentation de méthodes REST.</div></div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Pendant mon stage, j'ai été chargé de reprendre un projet d'application web d'orchestre développée en Java avec Spring Boot. Mes missions comprenaient la refonte de la modélisation de la base de données, sa création sur MySQL, la mise en place du projet Spring Boot, la configuration de la source de données MySQL dans Spring Boot, ainsi que la création de certaines entités, leurs repositories et l'implémentation de méthodes REST.</div></div>
                                     </div>
                                 </div>
-                            </div>
 
                             <!-- Experience Card 3-->
                         </section>
@@ -166,8 +179,9 @@
                         <!-- Skills Section-->
                         <section>
                             <!-- Skillset Card-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
-                                <div class="card-body p-5">
+                            <div class="hover-element">
+                                <div class="card shadow border-0 rounded-4 mb-5">
+                                    <div class="card-body p-5">
                                     <!-- Languages list-->
                                     <div class="mb-0">
                                         <div class="d-flex align-items-center mb-4">
@@ -185,15 +199,43 @@
                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">JavaScript </div></div>
                                         </div>
                                     </div>
+                                    </div>
                                 </div>
                             </div>
                         </section>
+                            <section>
+                                <div class="hover-element">
+                                    <div class="card shadow border-0 rounded-4 mb-5">
+                                        <div class="card-body p-5">
+                                            <div class="mb-0">
+                                                <div class="d-flex align-items-center mb-4">
+                                                    <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-code-slash"></i></div>
+                                                    <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Outils Dev</span></h3>
+                                                </div>
+                                                <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">DockerL</div></div>
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">MySQL</div></div>
+                                                    <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">WorkBench</div></div>
+                                                </div>
+                                                <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">PostgreSQL</div></div>
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Postman</div></div>
+                                                    <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Insomnia</div></div>
+                                                </div>
+                                                <div class="row row-cols-1 row-cols-md-3">
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Notion</div></div>
+                                                    <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">GitHub</div></div>
+                                                    <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">SceneBuilder</div></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                            </div>
+                            </section>
                         </section>
                     </div>
                 </div>
             </div>
-
-
         </main>
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
