--- a/projects.html
+++ b/projects.html
@@ -49,58 +49,36 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Help ORT PHP</h2>
+                                            <h2 class="fw-bolder">Help ORT </h2>
                                             <p>Le projet consiste à développer la partie front-end d'un site web appelé HelpORT, construit en PHP Symfony 6. L'objectif principal est d'offrir un support aux étudiants de l'école ORT Montreuil en leur permettant de dispenser des cours entre eux, en fonction de leurs classes et des matières dans lesquelles ils peuvent offrir leur aide.
 
-                                                Les fonctionnalités développées incluent la possibilité de choisir les matières dans lesquelles dispenser des cours, la demande de cours de soutien et la création d'un graphique analytique pour suivre l'utilisation de l'application. Voici quelques images </p>
-                                            Verification de l'existance des identifiants de connexions avec API de l'école
+                                                Les fonctionnalités développées incluent la possibilité de choisir les matières dans lesquelles dispenser des cours, la demande de cours de soutien et la création d'un graphique analytique pour suivre l'utilisation de l'application.</p>
+                                            Cette application est aussi disponible en web
                                             <div class="image-link" >
-                                            <img src="assets/logo%20ort.png" alt="..." >
-                                                <div class="image-layer">gzg</div>
+                                                <img src="assets/logo%20ort.png" alt="..." >
+                                                <div class="image-layer">  <a href="projetWebOrt.html"><h2 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline"> version web php</span></h2></a></div>
+                                            </div>
+                                            <div class="image-link" >
+                                                <img src="assets/logo%20ort.png" alt="..." >
+                                                <div class="image-layer">  <a href="projetJavaOrt.html"><h2 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">version Application Java </span></h2></a></div>
                                             </div>
                                         </div>
                                         <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card 2-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0">
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">Help ORT JAVA</h2>
-                                            <p>Le deuxième projet porte sur HelpORT, mais cette fois-ci en tant qu'application lourde développée en JavaFX. Les fonctionnalités du projet restent inchangées, à l'exception de la structure de la base de données qui est différente.</p>
-                                        <img class="img-fluid" src="assets/javaLoad.png" alt="...">
-                                            Accueil de la partie etudiante
-                                            <img class="img-fluid" src="assets/JavaSoutien.png" alt="...">
-                                            Partie admin de l'applicaction
-                                            <img class="img-fluid" src="assets/JavaAdmin.png" alt="...">
-                                            Affichage des matières
-                                            <img class="img-fluid" src="assets/affichage%20de.png" alt="...">
-                                            creation de demande
-                                            <img class="img-fluid" src="assets/creationdemande.png" alt="...">
-                                            modification et suppression de demandes
-                                            <img class="img-fluid" src="assets/JavaModification.png" alt="...">
-                                            statistique des soutiens
-                                            <img class="img-fluid" src="assets/javaStat.png" alt="...">
-                                    </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <br>
-                            <br>
+
                             <!-- Project Card hackathon-->
                             <div class="card overflow-hidden shadow rounded-4 border-0">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">hackathon</h2>
-                                            <p>
-                                                <img class="img-fluid" src="assets/Orange_ex3.png" alt="..." ></p>
-                                                <img class="img-fluid" src="assets/Orange_ex2.png" alt="..." ></p>
-                                                <img class="img-fluid" src="assets/Orange_ex1.png" alt="..." ></p>
-
-                                            <!--img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." /-->
+                                            Mon projet chez Orange était lié à la création d'un système de gestion des énergies des batiments oranges pouvant fonctionné grâce à une IA
+                                            <div class="image-link" >
+                                                <img src="assets/orange.jpg" alt="..." >
+                                                <div class="image-layer">  <a href="projetOrange.html"><h2 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Voir EcoRange </span></h2></a></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
