--- a/projetWebOrt.html
+++ b/projetWebOrt.html
@@ -45,15 +45,15 @@
                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                             <p>Verification de l'existance des identifiants de connexions avec API de l'école
                             <img class="img-fluid" src="assets/verification.png" alt="..." ></p>
-                            Ensuite un lien est envoyer par mail avec lequel un nouveau mot de passe est créer pour utiliser l'application web
+                            <br>Ensuite un lien est envoyer par mail avec lequel un nouveau mot de passe est créer pour utiliser l'application web
                             <img class="img-fluid" src="assets/modificationMdp.png" alt="..." ></p>
-                            Connexion avec les nouveaux identifiants
+                            <br>Connexion avec les nouveaux identifiants
                             <img class="img-fluid" src="assets/connexion.png" alt="..." ></p>
-                            Création de demandes
+                            <br>Création de demandes
                             <img class="img-fluid" src="assets/création.png" alt="..." ></p>
-                            Modification des demandes
+                            <br>Modification des demandes
                             <img class="img-fluid" src="assets/modification.png" alt="..." ></p>
-                            Statistiques des soutiens
+                            <br>Statistiques des soutiens
                             <img class="img-fluid" src="assets/stat.png" alt="..." ></p>
                         </div>
                         <div class="col-lg-8"><div></div></div>
