Modifications de la présentation v2

--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
                                             <h2 class="fw-bolder">hackathon</h2>
                                             Mon projet chez Orange était lié à la création d'un système de gestion des énergies des batiments oranges pouvant fonctionné grâce à une IA
                                             <div class="image-link" >
-                                                <img src="assets/orange.jpg" alt="..." >
+                                                <img src="iPortfolio/assets/img/portfolio/orange.jpg" alt="..." >
                                                 <div class="image-layer">  <a href="projetOrange.html"><h2 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Voir EcoRange </span></h2></a></div>
                                             </div>
                                         </div>
