--- a/projetJavaOrt.html
+++ b/projetJavaOrt.html
@@ -52,7 +52,7 @@
                     <br>Affichage des matières
                     <img class="img-fluid" src="assets/affichage%20de.png" alt="...">
                     <br>creation de demande
-                    <img class="img-fluid" src="assets/creationdemande.png" alt="...">
+                    <img class="img-fluid" src="iPortfolio/assets/img/portfolio/creationdemande.png" alt="...">
                     <br>modification et suppression de demandes
                     <img class="img-fluid" src="assets/JavaModification.png" alt="...">
                     <br>statistique des soutiens
