--- a/projetWebOrt.html
+++ b/projetWebOrt.html
@@ -46,15 +46,15 @@
                             <p>Verification de l'existance des identifiants de connexions avec API de l'école
                             <img class="img-fluid" src="assets/verification.png" alt="..." ></p>
                             <br>Ensuite un lien est envoyer par mail avec lequel un nouveau mot de passe est créer pour utiliser l'application web
-                            <img class="img-fluid" src="assets/modificationMdp.png" alt="..." ></p>
+                            <img class="img-fluid" src="iPortfolio/assets/img/portfolio/modificationMdp.png" alt="..." ></p>
                             <br>Connexion avec les nouveaux identifiants
                             <img class="img-fluid" src="assets/connexion.png" alt="..." ></p>
                             <br>Création de demandes
-                            <img class="img-fluid" src="assets/création.png" alt="..." ></p>
+                            <img class="img-fluid" src="iPortfolio/assets/img/portfolio/création.png" alt="..." ></p>
                             <br>Modification des demandes
-                            <img class="img-fluid" src="assets/modification.png" alt="..." ></p>
+                            <img class="img-fluid" src="iPortfolio/assets/img/portfolio/modification.png" alt="..." ></p>
                             <br>Statistiques des soutiens
-                            <img class="img-fluid" src="assets/stat.png" alt="..." ></p>
+                            <img class="img-fluid" src="iPortfolio/assets/img/portfolio/stat.png" alt="..." ></p>
                         </div>
                         <div class="col-lg-8"><div></div></div>
 
