--- a/index.html
+++ b/index.html
@@ -390,46 +390,46 @@
         <h2>Contact</h2>
         <p>Je serais ravis de vous entendre ! Contactez-moi pour toute demande ou retour d'information</p>
       </div><!-- End Section Title -->
+      <!--
+           <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-     <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row justify-content-center gy-4">
 
-  <div class="row justify-content-center gy-4">
+          <div class="col-lg-7">
+            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+              <div class="row gy-4">
 
-    <div class="col-lg-7">
-      <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-        <div class="row gy-4">
+                <div class="col-md-6">
+                  <label for="name-field" class="pb-2">Votre Nom</label>
+                  <input type="text" name="name" id="name-field" class="form-control" required="">
+                </div>
 
-          <div class="col-md-6">
-            <label for="name-field" class="pb-2">Votre Nom</label>
-            <input type="text" name="name" id="name-field" class="form-control" required="">
-          </div>
+                <div class="col-md-6">
+                  <label for="email-field" class="pb-2">Votre Email</label>
+                  <input type="email" class="form-control" name="email" id="email-field" required="">
+                </div>
 
-          <div class="col-md-6">
-            <label for="email-field" class="pb-2">Votre Email</label>
-            <input type="email" class="form-control" name="email" id="email-field" required="">
-          </div>
+                <div class="col-md-12">
+                  <label for="subject-field" class="pb-2">Sujet</label>
+                  <input type="text" class="form-control" name="subject" id="subject-field" required="">
+                </div>
 
-          <div class="col-md-12">
-            <label for="subject-field" class="pb-2">Sujet</label>
-            <input type="text" class="form-control" name="subject" id="subject-field" required="">
-          </div>
+                <div class="col-md-12">
+                  <label for="message-field" class="pb-2">Message</label>
+                  <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
+                </div>
 
-          <div class="col-md-12">
-            <label for="message-field" class="pb-2">Message</label>
-            <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
-          </div>
+                <div class="col-md-12 text-center">
+                  <div class="loading">Chargement</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Votre message a été envoyé</div>
 
-          <div class="col-md-12 text-center">
-            <div class="loading">Chargement</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Votre message a été envoyé</div>
+                  <button type="submit">Envoyer</button>
+                </div>
 
-            <button type="submit">Envoyer</button>
-          </div>
-
-        </div>
-      </form>
-    </div><!-- End Contact Form -->
+              </div>
+            </form>
+          </div> End Contact Form -->
 
   </div>
 
