--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Téléphone:</strong> <span>+33669174075</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Téléphone:</strong> <span>+33 669174075</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ville:</strong> <span>Paris, France</span></li>
 
                 </ul>
